--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,8 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+NIPPO_COUNT_HOST_NAME=null
+SLACK_HOOK_TOKEN=null
+ESA_TEAM_NAME=null
+ESA_ACCESS_TOKEN=null
